--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,9 @@
     <% end %>
   </p>
   <ul class="nav navbar-nav">  
+    <li>
+      <%= link_to "Categories", categories_path %>
+    </li>
     <% if user_signed_in? %>
     <li>
       <%#= link_to 'Profile', user_path(current_user) %>
