--- a/app/views/categories/_form.html.slim
+++ b/app/views/categories/_form.html.slim
@@ -1,9 +1,9 @@
-= form_for @category do |f|
+= simple_form_for @category do |f|
   - if @category.errors.any?
     #error_explanation
       h2 = "#{pluralize(@category.errors.count, "error")} prohibited this category from being saved:"
       ul
         - @category.errors.full_messages.each do |message|
           li = message
-
+  = f.input :name
   .actions = f.submit 'Save'
