--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -8,7 +8,7 @@ table
 
   - @categories.each do |category|
     tr
-      td = link_to 'Show', category
+      td = link_to category.name, category
       td = link_to 'Edit', edit_category_path(category)
       td = link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete
 
