--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -8,10 +8,14 @@ table
 
   - @categories.each do |category|
     tr
-      td = link_to category.name, category
-      td = link_to 'Edit', edit_category_path(category)
-      td = link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete
+      - if can? :read, category
+        td = link_to category.name, category
+      - if can? :update, category
+        td = link_to 'Edit', edit_category_path(category)
+      - if can? :destroy, category
+        td = link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete
 
 br
 
-= link_to 'New Category', new_category_path
+- if can? :create, Category
+  = link_to 'New Category', new_category_path
