--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_report_path(@report) %> |
+<%if can? :edit, @report %>
+  <%= link_to 'Edit', edit_report_path(@report) %> |
+<%end%>
 <%= link_to 'Back', reports_path %>
