Update report's views

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -12,7 +12,8 @@
   <% end %>
 
 
-  <%= f.input :text %>
+  <%= f.input :title %>
+  <%= f.input :description %> 
   <%=  f.association :category, as: :radio_buttons %>
   <div class="actions">
     <%= f.submit %>
