--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,4 +1,7 @@
 <p id="notice"><%= notice %></p>
+
+<%= @report.title %>
+<%= @report.description %>
 <%if can? :edit, @report %>
   <%= link_to 'Edit', edit_report_path(@report) %> |
 <%end%>
