--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,8 @@
       Logged in as <%= current_user.email %>
       <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
     <% else %>
-      <%= link_to('Login', new_user_session_path)  %>  
+      <%= link_to('Login', new_user_session_path)  %>
+      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
     <% end %>
   </p>
   <ul class="nav navbar-nav">
