--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -12,7 +12,8 @@ p#notice= notice
 
   
 
-  - if can? :manage, @report
-    .controls.btn-group.pull-right
+  .controls.btn-group.pull-right
+    - if can? :edit, @report
       = link_to "edit", edit_report_path(@report), class: 'btn'
+    - if can? :destroy, @report
       = link_to "delete", @report, class: 'btn',:method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }
