--- a/app/views/users/edit.slim
+++ b/app/views/users/edit.slim
@@ -1,4 +1,9 @@
-= simple_form_for @user, :url => update_account_path, :method => :post, :html => { :multipart => true } do |f|
-  =f.input :name
-  = f.file_field :image
-  = f.submit "Update"
+.span10
+  .well
+    = simple_form_for @user, :url => update_account_path, :method => :post, :html => { :multipart => true, class: "form-horizontal" } do |f|
+      .control-group
+        = f.input :name
+      .control-group.offset1
+        = f.file_field :image
+      .actions.pull-right
+        = f.submit "Update"
