--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,8 +7,13 @@
 <div class="nav-collapse collapse">
   <p class="navbar-text pull-right">
     <% if user_signed_in? %>
-      Logged in as <%= current_user.email %>
-      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
+      <div class="logged-info pull-right">
+        Logged in as <%= current_user.email %>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
+      </div>
+      <div class="image pull-right">
+        <%=image_tag(current_user.image.url(:small)) %>
+    </div>
     <% else %>
       <%= link_to('Login', new_user_session_path)  %>  
     <% end %>
