Create pictures controller

--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -9,6 +9,9 @@ p#notice= notice
   .text
     == @report.description
 
+  .pictures
+    =link_to "Gallery", report_pictures_path(@report)
+
 
   
 
