--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,7 +24,7 @@
       </li>
     <% if user_signed_in? %>
     <li>
-      <%#= link_to 'Profile', user_path(current_user) %>
+      <%= link_to 'Profile', account_path %>
     </li>
     <% end %>
   </ul>
