--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Reports controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+div.report.hero-unit {
+  padding-top: 5px;
+  padding-right: 5px;
+}
+
+.report-data{
+  padding-top: 58px;
+}
+
+.report .pictures{
+  padding-top: 15px;
+}
