--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -23,4 +23,4 @@ h1 Listing reports
     hr
 
 - if can? :create, Report
-  = link_to 'New Report', new_report_path
+  = link_to 'New Report', new_report_path, class: 'btn btn-large'
