--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -1,16 +1,17 @@
 p#notice= notice
-.post.hero-unit
+.report.hero-unit
   .well.well-small.pull-right.author
     p
-      = "Created before #{time_ago_in_words (@report.created_at)} by #{@report.user.email}"
+      = "Created before #{time_ago_in_words (@report.created_at)} by #{@report.user.name}"
 
-  h1
-    = @report.title
-  .text
-    == @report.description
+  .report-data
+    h1
+      = @report.title
+    .text
+      == @report.description
 
   .pictures
-    =link_to "Gallery", report_pictures_path(@report)
+    =link_to "Gallery", report_pictures_path(@report), class: 'btn btn-inverse btn-large'
 
 
   
