--- a/app/views/pictures/index.html.slim
+++ b/app/views/pictures/index.html.slim
@@ -1,7 +1,7 @@
 .gallery
   -@pictures.each do |pic|
     - unless pic.new_record?
-      = link_to image_tag(pic.image.url(:small), class: "img-polaroid"), report_picture_path(@report, pic)
+      = link_to image_tag(pic.image.url(:small), class: "img-polaroid"), report_picture_path(@report, pic), class: "popup"
       = link_to "delete", report_picture_path(@report, pic), class: 'btn btn-mini',:method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }
 
 br
