--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,5 +39,5 @@ html xmlns:fb="http://ogp.me/ns/fb#"
               = render 'layouts/messages'
               = yield
           footer
-            .fb-like data-href="https://github.com/mihaylova" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"
-
+            .fb-like data-href="http://9gag.com/gag/a3Yb6DQ" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"
+            .fb-comments data-href="http://9gag.com/gag/a3Yb6DQ" data-numposts="5" data-colorscheme="light"
