--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -21,3 +21,7 @@ p#notice= notice
       = link_to "edit", edit_report_path(@report), class: 'btn'
     - if can? :destroy, @report
       = link_to "delete", @report, class: 'btn',:method => 'delete', :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }
+
+button#fb-share data-redirect_uri="#{report_url(@report)}" data-link="#{report_url(@report)}" data-picture="trump-mihailova.rhcloud.com/assets/images/cards690-366.jpg" data-name="#{@report.user.name}" data-caption="#{@report.title}" data-description= "#{@report.description.truncate(100, separator: ' ')}" Share with your friends
+
+button#fb-send-link data-link="#{report_url(@report)}" Send report to friends
