Setup Facebook Social Plugins

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,10 +5,10 @@ html xmlns:fb="http://ogp.me/ns/fb#"
     meta property="og:site_name" content="Reports"
     meta property="og:title" content="Reports"
     meta property="og:type" content="article"
-    meta property="og:url" content="some_url"
-    meta property="og:image" content="path_to_some_image"
+    meta property="og:url" content="#{root_url}"
+    meta property="og:image" content="trump-mihailova.rhcloud.com/assets/images/cards690-366.jpg"
     meta property="og:locale" content="en_US"
-    meta property="og:description" content="some_descriptions"
+    meta property="og:description" content="Test project - reports"
 
    
 
