--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -24,3 +24,8 @@ h1 Listing reports
 
 - if can? :create, Report
   = link_to 'New Report', new_report_path, class: 'btn btn-large'
+
+.fb-like data-href="http://lannisport-rails-93377.euw1-2.nitrousbox.com/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"
+.fb-comments data-href="http://lannisport-rails-93377.euw1-2.nitrousbox.com/" data-numposts="5" data-colorscheme="light"
+/ .fb-like data-href="#{root_url}" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"
+/ .fb-comments data-href="#{root_url}" data-numposts="5" data-colorscheme="light"
