Facebook login via js and koala

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,6 +20,12 @@ html xmlns:fb="http://ogp.me/ns/fb#"
   body
     #fb-root
     javascript:
+      FB.init({
+        appId      : '135675926603185',
+        status     : true, // check login status
+        cookie     : true, // enable cookies to allow the server to access the session
+        xfbml      : true  // parse XFBML
+      });
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
