--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,17 +6,9 @@
 <a class="brand" href="/">Home</a>
 <div class="nav-collapse collapse">
   <p class="navbar-text pull-right">
+    <fb:login-button show-faces="true" width="200" max-rows="1" scope="email"></fb:login-button>
     <% if user_signed_in? %>
-      <div class="logged-info pull-right">
-        Logged in as <%= current_user.email %>
-        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
-      </div>
-      <div class="image pull-right">
-        <%=image_tag(current_user.image.url(:small)) %>
-    </div>
-    <% else %>
-      <%= link_to('Login', new_user_session_path)  %>
-      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+      <input type="button" value="Logout" onclick="FB.logout();">
     <% end %>
   </p>
   <ul class="nav navbar-nav">
