--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,12 +3,12 @@ html xmlns:fb="http://ogp.me/ns/fb#"
   head
     meta property="fb:app_id" content="135675926603185"
     meta property="og:site_name" content="Reports"
-    meta property="og:title" content="Reports"
+    meta property="og:title" content="#{@report.try(:title)|| "Reports"}"
     meta property="og:type" content="article"
-    meta property="og:url" content="#{root_url}"
+    meta property="og:url" content="#{@report ? report_url(@report) : root_url}"
     meta property="og:image" content="trump-mihailova.rhcloud.com/assets/images/cards690-366.jpg"
     meta property="og:locale" content="en_US"
-    meta property="og:description" content="Test project - reports"
+    meta property="og:description" content="#{@report ? @report.description.truncate(100, separator: ' ') : ""}"
 
    
 
