Fix meta 'og:description' in create report page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html xmlns:fb="http://ogp.me/ns/fb#"
     meta property="og:url" content="#{@report ? report_url(@report) : root_url}"
     meta property="og:image" content="trump-mihailova.rhcloud.com/assets/images/cards690-366.jpg"
     meta property="og:locale" content="en_US"
-    meta property="og:description" content="#{@report ? @report.description.truncate(100, separator: ' ') : ""}"
+    meta property="og:description" content="#{@report ? @report.description.try(:truncate, 100, separator: ' ') : ""}"
 
    
 
