Add facebook acount to current user

--- a/app/views/users/omniauth_callbacks/facebook.html.erb
+++ b/app/views/users/omniauth_callbacks/facebook.html.erb
@@ -3,7 +3,7 @@
   </head>
   <body>
     <script type="text/javascript"> 
-      window.location.href = "<%= root_url %>"
+      window.location.href = "<%= @redirect_to %>"
     </script>
   </body>
 </html>
