--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -13,3 +13,6 @@
       = image_tag @user.image.url(:large), class: "img-polaroid"
     .pull-right
       =link_to "Edit profile", edit_account_path, class: "btn"
+
+-unless @user.has_fb_account?
+  =link_to "Add facebook acount", user_omniauth_authorize_path(:facebook)
