--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,9 @@
   <div><%= f.label :name %><br />
   <%= f.text_field :name%></div>
 
+ <div><%= f.label :image %><br />
+  <%= f.file_field :image%></div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
