Update user's show and edit page with new fields

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,9 @@
   <div><%= f.label :name %><br />
   <%= f.text_field :name%></div>
 
+  <div><%= f.label :location %><br />
+  <%= f.text_field :location%></div>
+
  <div><%= f.label :image %><br />
   <%= f.file_field :image%></div>
 
