Show notifications ||| Need fix

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,3 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body { padding-top: 80px; }
+
+
+.notification .new{
+  border: solid red;
+  background-color: rgb(189, 180, 180);
+}
