--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -15,5 +15,7 @@
             td= @user.location
       - if @user.has_image?
         = image_tag @user.image.url(:large), class: "img-polaroid"
+
     .pull-right
       =link_to "Edit profile", edit_user_registration_path, class: "btn"
+      =link_to "Notifications(#{@user.new_notifications.size})", user_notifications_path, class: 'btn'
