--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html xmlns:fb="http://ogp.me/ns/fb#"
     meta property="og:image" content="#{root_url}fb.jpg"
     meta property="og:locale" content="en_US"
     meta property="og:description" content="#{@report ? @report.description.try(:truncate, 100, separator: ' ') : ""}"
-
+    link rel="icon" type="image/png" href="/favicon.ico"
    
 
     title Reports
