--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,31 +6,9 @@
 <a class="brand" href="/">Home</a>
 <div class="nav-collapse collapse">
   <p class="navbar-text pull-right">
-    <% if user_signed_in? %>
-      <div class="logged-info pull-right">
-        Logged in as <%= current_user.email %>
-        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %> 
-      </div>
-      <div class="image pull-right">
-        <% if current_user.has_image? %>
-          <%=image_tag(current_user.image.url(:small)) %>
-        <%else %>
-          <%=image_tag(current_user.fb_picture) %>
-        <% end %>
+    <div class="logged-info pull-right">
+      <div ng-init="current_user = <%= current_user.to_json %>;"> </div>
+      <div ng-include="'<%= asset_path("app/templates/account/login-bar.html") %>'"> </div>
     </div>
-    <% else %>
-      <%= link_to('Login', new_user_session_path)  %>
-      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-    <% end %>
   </p>
-  <ul class="nav navbar-nav">
-      <li>
-        <%= link_to "Categories", categories_path %>
-      </li>
-    <% if user_signed_in? %>
-    <li>
-      <%= link_to 'Profile', account_path %>
-    </li>
-    <% end %>
-  </ul>
 </div><!--/.nav-collapse -->
