Create angular category factory and show categories in report's form

--- a/app/assets/javascripts/app/templates/reports/_form.html.erb
+++ b/app/assets/javascripts/app/templates/reports/_form.html.erb
@@ -1,5 +1,4 @@
 <errors ng-if="errors"></errors>
-
 <div class="field">
   <label for="title">Title</label><br>
   <input type="text" id="title" ng-model="report.title" />
@@ -7,10 +6,9 @@
 <div class="field">
   <label for="body">Body</label><br>
   <textarea rows="4" cols="50" ng-model="report.description"></textarea>
-  <% Category.all.each do |cat|%>
-  <p> kjjksdfjhdskjfhjdskfh </p>
-  <input type="radio" name="report" value="<%=cat.id%>" ng-model="report.category_id"> <%= cat.name %>
-  <%end%>
+  <div ng-repeat="category in categories">
+    <input type="radio" name="report" value="{{category.id}}" ng-model="report.category_id"> {{ category.name }}
+  </div>
 </div>
 <div class="actions">
   <button class="btn btn-primary" ng-click="submit()">
