--- a/app/assets/javascripts/app/app.js.coffee.erb
+++ b/app/assets/javascripts/app/app.js.coffee.erb
@@ -12,12 +12,22 @@ angular.module('app', [
   # 'app.filters',
   'app.controllers.reports',
   'app.controllers.login',
+  'app.services.category',
   'ng-rails-csrf'
 ]).
-config ['$routeProvider', ($routeProvider) ->
+config ['$routeProvider', '$httpProvider', ($routeProvider, $httpProvider) ->
   $routeProvider.when '/', templateUrl: '<%= asset_path("app/templates/reports/index.html") %>', controller: 'Reports'
   $routeProvider.when '/reports/new', templateUrl: '<%= asset_path("app/templates/reports/new.html") %>', controller: 'NewReport'
   $routeProvider.when '/reports/:id/edit', templateUrl: '<%= asset_path("app/templates/reports/edit.html") %>', controller: 'EditReport'
   $routeProvider.when '/reports/:id', templateUrl: '<%= asset_path("app/templates/reports/show.html") %>', controller: 'ShowReport'
   $routeProvider.otherwise redirectTo: '/'
+  interceptor = ($q, $location, $rootScope) ->
+    responseError: (rejection) ->
+      if (rejection.status == 401) 
+        $rootScope.$broadcast('event:unauthorized')
+        $location.path('/')
+        rejection
+      $q.reject(rejection)
+  $httpProvider.interceptors.push(interceptor)
 ]
+
