--- a/app/assets/javascripts/app/app.js.coffee.erb
+++ b/app/assets/javascripts/app/app.js.coffee.erb
@@ -8,6 +8,7 @@ angular.module('app', [
   # 'app.factories',
   'app.services',
   "app.services.identity",
+  "app.services.comment",
   'app.directives',
   # 'app.filters',
   'app.controllers.reports',
