--- a/app/assets/javascripts/app/templates/reports/show.html.erb
+++ b/app/assets/javascripts/app/templates/reports/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="report hero-unit">
   <div class="well well-small pull-right author">
     <p>
@@ -24,7 +23,7 @@
   </div>
 </div>
 
-<br>
+<!-- <br>
 <br>
 <br>
 <hr>
@@ -43,12 +42,39 @@
 
 <div class="fb-comments" data-href="http://localhost:3000/reports/{{report.id}}" data-numposts="5" data-colorscheme="light"> </div>
 
+ -->
 
-<!-- 
-#comments
-  = render @report.comments.order('created_at')
-- if user_signed_in?
-  button#add_comment
-    i.icon-comment  Comment
-  #new-comment.invisible
-    = render :partial => '/comments/form'
+<div id="comments">
+   <div ng-repeat="comment in comments">
+    <div class="well">
+      <p class="info pull-right"> 
+        "Created at {{ comment.created_at }} by {{ comment.author_name}}"
+        <span ng-show="comment.updated">
+          "Updated at {{ comment.updated_at }}"
+        </span>
+      </p>
+      <p class="text"> 
+        {{ comment.text }}
+      </p> 
+      <div class="actions controls btn-group pull-right">
+          <span  ng-show="comment.can_edit">
+            <!-- <button ng-click="edit_comment($index, comment.id)" class="btn btn-mini">edit</button> -->
+          </span>
+          <span  ng-show="comment.can_destroy">
+            <button ng-click="delete_comment($index, comment.id)" class="btn btn-mini">delete</button>
+          </span>
+      </div>
+    </div>
+    <hr>
+   </div>
+    <div ng-show="!!currentUser || !!current_user">
+      <button id="add_comment" class="btn btn-large"><i class="icon-comment">Add Comment </i></button>
+    </div>
+    <div id="new-comment" class="invisible">
+      <div class="comment-form">
+        <input type="text" ng-model="new_comment.text">
+        <button ng-click="add_comment()" class="btn btn-inverse"> Create comment </button>
+      </div>
+    </div>
+</div>
+
