Move comments functions into separate controller

--- a/app/assets/javascripts/app/app.js.coffee.erb
+++ b/app/assets/javascripts/app/app.js.coffee.erb
@@ -12,6 +12,7 @@ angular.module('app', [
   'app.directives',
   # 'app.filters',
   'app.controllers.reports',
+  'app.controllers.comments',
   'app.controllers.login',
   'app.services.category',
   'ng-rails-csrf'
